# org-demo

./: README.org  demo.org  pyproject.toml
src/org_demo/: __init__.py  cli.py  document.py  emacs_handler.py
src/org_demo/elisp/: org-demo-exec.el  org-demo-image.el  org-demo-init.el  org-demo-note.el  org-demo-pop.el  org-demo-read.el  org-demo-verify.el
tests/: test_org_demo.py
