[project]
name = "org-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Gonzalez",email = "juang@wolfram.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.poetry]
packages = [{include = "org_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
